replaced svelte frontend with vue + vite frontend
